Change HTML content

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <h2 class="section-title">2-2 アイテム紹介 その2</h2>
             <div class="image-gallery">
                 <!-- ローカルパスの画像はウェブ上では表示されません。代わりに代替テキストが表示されます。 -->
-                <img src="C:\Users\gtchi\OneDrive\デスクトップ\Portfolio\Image\アイテム紹介(カギ・ロウソク).png" alt="アイテム紹介（カギ・ロウソク）の画像">
+                <img src="Image\アイテム紹介(カギ・ロウソク).png" alt="アイテム紹介（カギ・ロウソク）の画像">
             </div>
         </section>
 
