--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </p>
             <div class="image-gallery">
                 <!-- ローカルパスの画像はウェブ上では表示されません。代わりに代替テキストが表示されます。 -->
-                <img src="C:\Users\gtchi\OneDrive\デスクトップ\Portfolio\Image\アイテム紹介(スイッチ関連).png" alt="アイテム紹介（スイッチ関連）の画像">
+                <img src="Image/アイテム紹介(スイッチ関連).png" alt="アイテム紹介（スイッチ関連）の画像">
             </div>
 
 
@@ -265,7 +265,7 @@
         <section class="section" id="game-video">
             <h2 class="section-title">ゲーム紹介動画</h2>
          <p class="mb-4" style="font-size: 1.5em;">動画の時間は3:33となります。<span style="color: red;">※音量に注意してください！</span></p>
-           <video src= "C:\Users\gtchi\Videos\3D Game MysterySolvingDungeon ゲーム紹介（仮）.mp4" controls></video>
+           <video src= "Movie/3D Game MysterySolvingDungeon ゲーム紹介（仮）.mp4" controls></video>
             </p>
         </section>
 
@@ -435,7 +435,7 @@
                 CandlEerase Function() 内で UNiagara Component を取得し、SetVisibility() によりロウソクの炎を点火/消火で切り替える演出を実装しています。
             </p>
             <!-- ローカルパスの画像はウェブ上では表示されません。代替テキストが表示されます。 -->
-            <img src="C:\Users\gtchi\OneDrive\画像\MysterySolving「ポートフォリオ画像」\NiagaraComponent 使用例.png" alt="NiagaraComponent 使用例 コードスニペットの画像" class="code-block" style="background-color: #2d2d2d;">
+            <img src="Image/NiagaraComponent 使用例.png" alt="NiagaraComponent 使用例 コードスニペットの画像" class="code-block" style="background-color: #2d2d2d;">
 
             <h3 class="subsection-title">謎解き条件とプレイヤーの状態について</h3>
             <ul class="list-disc list-inside space-y-2 ml-4 mb-4">
@@ -445,7 +445,7 @@
 
             <h3 class="subsection-title">像を持っているか、または配置されているかの処理</h3>
             <!-- ローカルパスの画像はウェブ上では表示されません。代替テキストが表示されます。 -->
-            <img src="C:\Users\gtchi\OneDrive\画像\MysterySolving「ポートフォリオ画像」\CandlEeraseFunctionの実際の使用について.png" alt="CandlEeraseFunctionの実際の使用について コードスニペットの画像" class="code-block" style="background-color: #2d2d2d;">
+            <img src="Image/CandlEeraseFunctionの実際の使用について.png"" alt="CandlEeraseFunctionの実際の使用について コードスニペットの画像" class="code-block" style="background-color: #2d2d2d;">
 
         </section>
 
