--- a/開発資料について.html
+++ b/開発資料について.html
@@ -182,7 +182,7 @@
 
                 <h3 id="content-section1-2">ゲーム内容について</h3>
                 <div class="back-to-top"><a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/></svg>目次に戻る</a></div>
-                <img src="開発資料/企画書の画像/[企画]Mystery Solving Dungeon 修正後_page-0003.jpg.jpg">
+                <img src="開発資料/企画書の画像/[企画]Mystery Solving Dungeon 修正後_page-0003.jpg">
                 <div class="back-to-top"><a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/></svg>目次に戻る</a></div>
                 
                 <h3 id="content-section1-3">画面操作方法</h3>
