--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
             <nav>
                 <ul class="list-disc list-inside space-y-2 ml-4">
                     <li><a href="#header-profile" class="text-blue-400 hover:underline">1. 📖 自己紹介</a></li>
-                    <li><a href="#about-me" class="text-blue-400 hover:underline">2.📚 ABOUT ME <span class="text-base text-gray-400 ml-2">わたしについて</span></a></li>
-                    <li><a href="#skills" class="text-blue-400 hover:underline">3.🔧 SKILLS <span class="text-base text-gray-400 ml-2">技術スタック</span></a></li>
-                    <li><a href="#work-experience" class="text-blue-400 hover:underline">4.🏛️ WORK EXPERIENCE <span class="text-base text-gray-400 ml-2">経歴</span></a></li>
+                    <li><a href="#about-me" class="text-blue-400 hover:underline">2. ABOUT ME <span class="text-base text-gray-400 ml-2">わたしについて</span></a></li>
+                    <li><a href="#skills" class="text-blue-400 hover:underline">3. SKILLS <span class="text-base text-gray-400 ml-2">技術スタック</span></a></li>
+                    <li><a href="#work-experience" class="text-blue-400 hover:underline">4. WORK EXPERIENCE <span class="text-base text-gray-400 ml-2">経歴</span></a></li>
                     <li><a href="#section-game-intro" class="text-blue-400 hover:underline">5.🎮 ゲーム紹介・プロジェクト概要（開発資料・ゲーム動画含む）</a></li>
                         <ul class="list-disc list-inside ml-8 mt-2 space-y-1">
                             <li><a href="#game-dev-project" class="text-blue-400 hover:underline">①プロジェクト概要(開発訓練用ゲーム)</a></li>
@@ -353,6 +353,7 @@
                     <li><a href="#modules-used" class="text-blue-400 hover:underline">7. 🛠️ 実装技術の詳細：①プロジェクト概要(開発訓練用ゲーム)</a></li>
                     <li><a href="#library-list" class="text-blue-400 hover:underline">8. 🛠️ ライブラリ一覧：①プロジェクト概要(開発訓練用ゲーム)</a></li>
                     <li><a href="#ue-experience-learning" class="text-blue-400 hover:underline">9. 🎮 UnrealEngineの経験と学び</a></li>
+                    <li><a href="#unity-experience-learning" class="text-blue-400 hover:underline">10. 🎮 Unityの経験と学び</a></li>
                 </ul>
             </nav>
         </section>
@@ -536,13 +537,13 @@
                             <div class="timeline-marker"></div>
                             <p class="text-sm text-gray-400">2024年8月～2025年1月</p>
                             <h3 class="font-bold text-blue-300 text-lg">2024年8月~ 就労移行支援事業所 Kaienに通所開始</h3>
-                            <p class="text-gray-300 text-sm">2024年8月 基本的な職業訓練（グループで資料作成、発表など） </p>
-                           <p class="text-gray-300 text-sm">2024年9月 1ヵ月職業体験、IT登竜門参加<br>（プログラマ・Webデザイナ・インフラエンジニア・DXエンジニア） </p>
-                            <p class="text-gray-300 text-sm">2024年10月 Excelの基本課題取り組み（AVERAGEIF・COUNTIF・XLOOKUP・VLOOKUPなど）</p>
-                            <p class="text-gray-300 text-sm">2024年11月 マクロ・VBA</p>
-                            <p class="text-gray-300 text-sm">2024年11月 C++基本学習(Udemy)</p>
-                            <p class="text-gray-300 text-sm">2024年12月 UnrealEngine基本操作学習(Udemy)</p>
-                            <p class="text-gray-300 text-sm">2025年1月 3Dゲーム「MysterySolvingDungeon」開発準備</p>
+                            <p class="text-sm text-gray-400">2024年8月 基本的な職業訓練（グループで資料作成、発表など） </p>
+                           <p class="text-sm text-gray-400">2024年9月 1ヵ月職業体験、IT登竜門参加<br>（プログラマ・Webデザイナ・インフラエンジニア・DXエンジニア） </p>
+                            <p class="text-sm text-gray-400">2024年10月 Excelの基本課題取り組み（AVERAGEIF・COUNTIF・XLOOKUP・VLOOKUPなど）</p>
+                            <p class="text-sm text-gray-400">2024年11月 マクロ・VBA</p>
+                            <p class="text-sm text-gray-400">2024年11月 C++基本学習(Udemy)</p>
+                            <p class="text-sm text-gray-400">2024年12月 UnrealEngine基本操作学習(Udemy)</p>
+                            <p class="text-sm text-gray-400">2025年1月 3Dゲーム「MysterySolvingDungeon」開発準備</p>
                             </p>
                         </div>
                         <div class="timeline-item">
@@ -965,11 +966,43 @@
                 </li>
             </ul>
             <p class="mt-8 text-right"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
-
-              <footer class="text-center text-gray-500 text-sm mt-12 pb-4">
-                © 2025 Takurou Kawaguchi
-            </footer>
         </section>
+
+        <!-- 新しく追加されたUnityの経験と学びセクション -->
+        <section class="section" id="unity-experience-learning">
+            <p class="mt-8 text-right"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
+            <h2 class="section-title">10. 🎮 Unityの経験と学び</h2>
+            
+            <h3 class="subsection-title">基礎学習の難しさ</h3>
+            <ul class="list-disc list-inside space-y-2 ml-4">
+                <li>公式・個人サイトなど、多くの情報源を読んでも、コードの理解や読み解きに苦労した。</li>
+                <li>些細なことでも、実際に手を動かしてコードを書くことの重要性を強く感じた。</li>
+            </ul>
+
+            <h3 class="subsection-title">挑戦と成長の葛藤</h3>
+            <ul class="list-disc list-inside space-y-2 ml-4">
+                <li>Unityに慣れてきた頃、実力以上のことに挑戦してしまい、成長が実感できず苦しんだ。</li>
+                <li>自分のレベルに合った学習の順番と優先度を意識することが大切だと学んだ。</li>
+            </ul>
+
+            <h3 class="subsection-title">情報の混乱とエラー対応</h3>
+            <ul class="list-disc list-inside space-y-2 ml-4">
+                <li>Unityの仕様変更や、授業資料・参考書・ネット情報のバージョン違いによるエラーが多発した。</li>
+                <p>　例: Text.textからText.SetText()への変更など、細かな仕様変更への対応に追われた。</p>
+                <li>しかし、そのエラー対応を通して、逆に仕様変更の意図や根本的な理解を深められた。</li>
+            </ul>
+
+            <h3 class="subsection-title">効率的な学習方法</h3>
+            <ul class="list-disc list-inside space-y-2 ml-4">
+                <li>必要な機能に集中して学ぶ姿勢を身につけた。</li>
+                <li>物理計算が不要なプロジェクトなら、物理の学習は後回しにするなど、効率を意識するようになった。</li>
+            </ul>
+            <p class="mt-8 text-right"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
+        </section>
+
+        <footer class="text-center text-gray-500 text-sm mt-12 pb-4">
+            © 2025 Takurou Kawaguchi
+        </footer>
     </div>
 </body>
 </html>
