--- a/index.html
+++ b/index.html
@@ -360,17 +360,21 @@
 
         <section class="section" id="header-profile">
             <!-- 画像のalt属性を修正 -->
-            <img src="https://placehold.co/180x180/4a5568/a0aec0?text=Your+Photo" alt="川口拓郎のプロフィール写真" class="w-40 h-40 rounded-full object-cover shadow-xl border-4 border-blue-400 md:mr-8 md:mb-0 mb-4">
+            <img src="Image/証明写真_履歴書用_3.jpg" alt="川口拓郎のプロフィール写真" class="w-40 h-40 rounded-full object-cover shadow-xl border-4 border-blue-400 md:mr-8 md:mb-0 mb-4">
             <div class="flex-1">
                 <h2 class="section-title">1. 📖 自己紹介</h2>
                 <h1 class="text-4xl font-extrabold text-blue-400 mb-2">川口 拓郎</h1>
                 <p class="text-xl font-light text-gray-300 mb-4">Takuro Kawaguchi</p>
-               <div class="bg-black text-white p-4 rounded-md">
+               <div class="bg-black text-white p-5 rounded-md">
                     <p class="text-base">
-                        専門学校でC#とUnityを、独学ではJavaScript、Python、BlenderやGIMPなど多岐にわたるツールを経験し、そしてC++とUnreal Engineで3D謎解きゲームを自主開発いたしました。様々な課題を乗り越えてゲーム開発への情熱を確信することができました。今後は、チーム開発に貢献できるプログラマーとして活躍したいと考えています。
+                        専門学校でC#とUnityを、独学ではJavaScript、Python、BlenderやGIMPなど多岐にわたるツールを経験し、
+                        <br>そして現在は、就労移行支援事業所の訓練時間にC++とUnreal Engineで3D謎解きゲームを自主開発いたしました。
+                        <br>様々な課題を乗り越えてゲーム開発への情熱を確信することができました。今後は、チーム開発に貢献できるプログラマーとして活躍したいと考えています。
                     </p>
                 </div>
-                <div class="mt-4 text-gray-500 text-sm space-y-1">
+                <div class="mt-5 text-gray-500 text-sm space-y-1"> 
+                    <h2>出身地：鹿児島県 鹿児島市出身<h2>
+                    <h2>生年月日：1996年9月11日（満28歳）<h2>
                     <p>最終学歴: バンタンゲームアカデミー東京校ゲーム学部ゲームプログラム総合学科　中途退学</p>
                     <p>メールアドレス：syukatsuaddress09@gmail.com</p>
                 </div>
@@ -617,7 +621,7 @@
                 <div class="note">
                 <p class="mb-2">
                     <span class="text-red-500">
-                        ※動画の時間は3：33です。音量にご注意ください。
+                        ※動画の音量にご注意ください。
                     </span>
                 </p>
             </div>
@@ -627,11 +631,25 @@
             <a href="開発資料について.html" target="_blank" class="inline-block bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded transition-colors duration-300">
                 開発資料を見る
             </a>
-            <a href="https://youtu.be/XEyPULc-1as" target="_blank" class="inline-block bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded transition-colors duration-300">
-                ゲーム紹介動画(Youtube)
+            <a href="https://youtu.be/3bIwBExL8jI" target="_blank" class="inline-block bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded transition-colors duration-300">
+                ゲーム本編の紹介動画(Youtube)<span class="text-red-500">※3:25秒の動画になります。</span>
             </a>
             <p class="mt-2 text-sm text-gray-500">※GitHubで「taku37817/MysterySolving」と検索してもアクセス可能です。</p>
+            
+            <p class="mt-8 text-right back-to-top"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
+
+            <br><br>
+             <span class="text-red-500">※動画の音量にご注意ください。</span><br>
+             <a>・タイトルの紹介動画</a>
+            <video src="Movie/3Dゲーム「MysterySolvingDungeon」ゲーム紹介動画（タイトル）.mp4" poster="サムネイル画像.jpg" controls></video>
+
+            <p class="mt-8 text-right back-to-top"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
+
+            <a>・タイムリミットの紹介動画</a>
+            <video src="Movie/タイムリミットについて.mp4" poster="サムネイル画像.jpg" controls></video>
+            
         </div>
+
         <p class="mt-8 text-right back-to-top"><a href="#table-of-contents" class="text-blue-400 hover:underline">目次に戻る</a></p>
 
         <h3 class="subsection-title" id="game-learning-project">②プロジェクト概要(学習用ゲーム)</h3>
