--- a/index.html
+++ b/index.html
@@ -655,7 +655,8 @@
         <h3 class="subsection-title" id="game-learning-project">②プロジェクト概要(学習用ゲーム)</h3>
         <p class="mb-4">
             『2D AIとオセロ対戦』対戦相手はAIのオセロゲームで、プレイヤーは白、AIは黒になります。<br>
-            ニューラルネットワークを利用したオセロゲームです。
+            ニューラルネットワークを利用したオセロゲームです。<br>
+            Unity 2019.4.12f1を利用し、C#で実装しました。
         </p>
         <h3 class="subsection-title">ゲームの特徴</h3>
         <ul class="list-disc list-inside space-y-1 ml-4">
